*** New macros `thread-first' and `thread-last' allow threading a form
    as the first or last argument of subsequent forms.


* Changes in Frames and Windows Code in Emacs 24.5

** Emacs can now draw horizontal scroll bars on some platforms that
provide toolkit scroll bars, namely Gtk, Lucid, Motif and Windows.
Horizontal scroll bars are turned off by default.
*** New mode `horizontal-scroll-bar-mode' to toggle horizontal scroll
    bars on all existing and future frames.
*** New frame parameters `horizontal-scroll-bars' and
    `scroll-bar-height' to set horizontal scroll bars and their height
    for individual frames and in `default-frame-alist'.
*** New function `frame-scroll-bar-height' to return the height of
    horizontal scroll bars on a specific frame.
*** `set-window-scroll-bars' now accepts five parameters where the last
    two specify height and type of the window's horizontal scroll bar.

** The height of a frame's menu and tool bar are no more counted in the
frame's text height.  This means that the text height stands only for
the height of the frame's root window plus that of the echo area (if
present).  This was already the behavior for frames with external tool
and menu bars (like in the Gtk builds) but has now been extended to all
builds.

** Frames now do not necessarily preserve the number of columns or lines
they display when setting default font, menu bar, fringe width, or
scroll bars.  In particular, maximized and fullscreen frames are
conceptually never resized if such settings change.  For fullheight and
fullwidth frames, the behavior may depend on the toolkit used.
*** New option `frame-inhibit-implied-resize' if non-nil, means that
   setting default font, menu bar, fringe width, or scroll bars of a
   specific frame does not resize that frame in order to preserve the
   number of columns or lines it displays.

* Changes in Emacs 24.5 on Non-Free Operating Systems

---
** Building Emacs for MS-Windows requires at least Windows XP